2003-10-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: widen the ChildSelect window
	* src/SelectPerson.py: sort people before adding to list
	* src/SelectChild.py: sort people before adding to list
	* src/ChooseParents.py: sort people before adding to list
	* src/AddSpouse.py: sort people before adding to list

2003-10-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ListModel.py: sorting improvements
	* src/PlaceView.py: use ListModel
	* src/RelLib.py: sort places by name

2003-10-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SourceView.py: Correct behavior for right-click popup menu.
	* src/EditPerson.py: Likewise.
	* src/FamilyView.py: Likewise.
	* src/ImageSelect.py: Likewise.
	* src/PedView.py: Likewise.
	* src/PlaceView.py: Likewise.
	* src/plugins/BookReport.py: Likewise.
	* src/PeopleView.py: Likewise.

2003-10-18  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SourceView.py: Enable popup menu on right-click.
	* src/PlaceView.py: Likewise.
	* src/MediaView.py: Likewise.

2003-10-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: Add a "sortbynames" to presort keys before adding to
	the tables
	* src/PeopleView.py: Presort names before adding, delay enabling of
	autosorting until data has been added
	* src/PeopleStore.py: Add enable sort task

2003-10-16  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: fixed paths to redisplay_person_list
	* src/ListModel.py: convert indices to strings. Sometimes a object just
	doesn't work as a dictionary key
	* src/PeopleStore.py: modify status bar, unroll loop while adding values

2003-10-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsCfg.py: Implement instant preferences (HIG).
	* src/preferences.glade: Likewise.
	* src/gramps_main.py (pref_callback): Update statusbar from prefs
	(needed for Family View). Enable switching Toolbar on/off.
	* NEWS: Instant prefs.