@@ -1,3 +1,6 @@
+2003-10-21  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/MediaView.py: Correct behavior for right-click popup menu.
+
 2003-10-20  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/gramps.glade: widen the ChildSelect window
 	* src/SelectPerson.py: sort people before adding to list
